# sip-pdb-py

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTES.txt  docker-compose.yml  pyproject.toml  requirements.txt  reset_migrations.sh
docker/: postupdate.sh  setup.sh
sip_pdb/: __init__.py  admin.py  auth.py  config.py  export.py  forms.py  helper.py  models.py  registrant.py
sip_pdb/templates/: layout.jinja  macros.jinja
sip_pdb/templates/admin/: beranda.jinja  layout.jinja  lihat_pembayaran.jinja  lihat_pendaftar.jinja  lihat_profil.jinja  verifikasi_pembayaran.jinja
sip_pdb/templates/login/: index.jinja  layout.jinja  lihat.jinja  register.jinja
sip_pdb/templates/registrant/: beranda.jinja  clone_alamat.jinja  edit_profil.jinja  finalisasi.jinja  ganti_password.jinja  isi_data.jinja  isi_ortu.jinja  isi_pernyataan.jinja  isi_wali.jinja  kartu_pendaftaran.jinja  laman_upload.jinja  layout.jinja  notif.jinja  rekap.jinja  surat_pernyataan.jinja
