[tool.poetry]
name = "sip-pdb-py"
version = "0.1.0"
description = ""
authors = ["Saiful Habib <sangpejuang32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
waitress = "^3.0.0"
flask-migrate = "^4.0.7"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
phonenumbers = "^8.13.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
